--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    background: url(https://78.media.tumblr.com/3e44bd05f9da2b04fe6a3d6ce8d146ba/tumblr_n74v6hpsG11tzzvwao1_250.gif) no-repeat center center fixed;
+    background: url(https://media.giphy.com/media/xUOwFYNbft1YOAc77i/giphy.gif) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
